--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,14 @@ email-validator==2.0.0.post2
 Flask==2.3.3
 flask-mongoengine==1.0.0
 Flask-WTF==1.1.1
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mongoengine==0.27.0
+packaging==23.1
 pymongo==4.5.0
 python-dotenv==1.0.0
 Werkzeug==2.3.7
 WTForms==3.0.1
-gunicorn==20.1.0
